add: nlp package to extract keyphrases, check wiki links for them and add them to db 	new file:   backend/nlp/__init__.py 	new file:   backend/nlp/handle_keywords.py 	new file:   backend/nlp/handle_wiki.py 	new file:   backend/nlp/stop_words.txt

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ django = "*"
 django-rest-framework = "*"
 django-cors-headers = "*"
 python-rake = "*"
+rake-nltk = "*"
+wikipedia = "*"
+nltk = "*"
 
 [dev-packages]
 
