--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ RUN pip install -r requirements.txt
 RUN pip install --user -U nltk
 RUN pip install rake-nltk
 COPY . .
-RUN python3 manage.py makemigrations
+RUN python3 manage.py migrate
 EXPOSE 8000
 # CMD ["python3", "manage.py", "migrate"]
