trying nltk downloader

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,8 @@ WORKDIR /backend
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 RUN pip install --user -U nltk
-RUN pip install rake-nltk
 COPY . .
+RUN python3 api/nlp/nltk_downloader.py
 RUN python3 manage.py migrate
 EXPOSE 8000
 # CMD ["python3", "manage.py", "migrate"]
