--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 RUN pip install --user -U nltk
 COPY . .
-RUN python3 api/nlp/nltk_downloader.py
+RUN python3 nlp/nltk_downloader.py
 RUN python3 manage.py migrate
 EXPOSE 8000
 # CMD ["python3", "manage.py", "migrate"]
